--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
         идти выкл (controls_x = 0)          [C]: "W", "0"
         идти левее (controls_x = -1)        [C]: "W", "1"
         идти правее (controls_x = 1)        [C]: "W", "2"
-        корректировка движения              [R]: {x}, {y}, {vel_x}, {vel_y}
         установить блок                     [P]: {x}, {y}, {тип}
         сломать блок                        [D]: {x}, {y}
         нажатие кнопки (список кнопок ниже) [K]: {кнопка}, {нажата ли}
         отправить сообщение                 [M]: {сообщение}
+        корректировка движения              [R]: {рандомное айди}, {x}, {y}
 
     сервер отправляет:
         кикнуть игрока с ошибкой        [K]: {ошибка}
@@ -122,6 +122,7 @@
         отправить мир                   [W]: {изм. мира}, {изм. мира}, ...
         отправить все типы блоков:      [B]: {тип_1}, ..., {тип_9}
         отправить сообщение             [M]: {сообщение}, {сообщение}, ...
+        корректировка движения          [R]: {рандомное айди}, {время}, {vel_x}, {vel_y}
 
 список кнопок которые может отправить игрок через отдельный пакет:
 ["KeyR", "KeyW", "KeyE", "KeyQ", "KeyS", "KeyZ", "KeyX", "KeyC"
