--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         сломать блок                        [D]: {x}, {y}
         нажатие кнопки (список кнопок ниже) [K]: {кнопка}, {нажата ли}
         отправить сообщение                 [M]: {сообщение}
-        корректировка движения              [R]: {рандомное айди}, {x}, {y}
+        корректировка движения              [R]: {рандомное айди}
 
     сервер отправляет:
         кикнуть игрока с ошибкой        [K]: {ошибка}
@@ -122,7 +122,7 @@
         отправить мир                   [W]: {изм. мира}, {изм. мира}, ...
         отправить все типы блоков:      [B]: {тип_1}, ..., {тип_9}
         отправить сообщение             [M]: {сообщение}, {сообщение}, ...
-        корректировка движения          [R]: {рандомное айди}, {время}, {vel_x}, {vel_y}
+        корректировка движения          [R]: {рандомное айди}, {время}, {vel_x}, {vel_y}, {x}, {y}
 
 список кнопок которые может отправить игрок через отдельный пакет:
 ["KeyR", "KeyW", "KeyE", "KeyQ", "KeyS", "KeyZ", "KeyX", "KeyC"
