--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
         <div class="margin-25"></div>
 
-        <a href="https://github.com/MeexReay/cubicjs">репозиторий гитхаб</a>
-        <a href="README.md">протокол сервера</a>
+        <a href="https://github.com/MeexReay/cubicjs">репозиторий гитхаб</a><br>
+        <a href="README.md">протокол сервера</a><br>
         <a href="server.py">готовая реализация сервера на Python</a>
     </div>
 
