--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <h3>список серверов:</h3>
 
-        <ul>
+        <ul style="list-style: thai;">
             <li>meex.lol</li>
             <li>других пока нет</li>
         </ul>
