client build update

--- a/client/index.html
+++ b/client/index.html
@@ -72,11 +72,9 @@
 
         <div class="margin-25"></div>
 
-        <a href="https://github.com/MeexReay/cubicjs">репозиторий гитхаб</a><br>
-        <a href="README.md">протокол сервера</a><br>
-        <a href="server.py">готовая реализация сервера на Python</a>
+        <a href="https://github.com/MeexReay/cubicjs">репозиторий гитхаб. там же протокол сервер и готовая реализация сервера на Python</a><br>
     </div>
 
-    <script src="script.js"></script>
+    <script src="dest/script.js"></script>
 </body>
 </html>
