--- a/client/index.html
+++ b/client/index.html
@@ -75,6 +75,6 @@
         <a href="https://github.com/MeexReay/cubicjs">репозиторий гитхаб. там же протокол сервер и готовая реализация сервера на Python</a><br>
     </div>
 
-    <script src="dest/script.min.js"></script>
+    <script src="dest/script.js"></script>
 </body>
 </html>
